[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["img*"]

[project]
name = "plemmy"
version = "0.4.1"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "A Python package for accessing the LemmyHttp API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests==2.31.0",
    "typing-extensions==4.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Fedihosting-Foundation/plemmy"
"Bug Tracker" = "https://github.com/Fedihosting-Foundation/plemmy/issues"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
